--- a/app/src/main/res/layout/fragment_add_story.xml
+++ b/app/src/main/res/layout/fragment_add_story.xml
@@ -90,11 +90,21 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/buttonLayout" />
 
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Add Curent Location"
+                android:textColor="?attr/colorOnPrimary"
+                app:layout_constraintTop_toBottomOf="@+id/ed_add_description"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_margin="20dp"
                 android:layout_height="60dp"
-                app:layout_constraintTop_toBottomOf="@+id/ed_add_description">
+                app:layout_constraintTop_toBottomOf="@+id/checkbox">
 
                 <Button
                     android:id="@+id/button_add"
